IntroWorkSpaceDanny/log/build_2023-02-14_18-32-35/timepubsub/stdout_stderr.log
running egg_info
writing ../../build/timepubsub/timepubsub.egg-info/PKG-INFO
writing dependency_links to ../../build/timepubsub/timepubsub.egg-info/dependency_links.txt
writing entry points to ../../build/timepubsub/timepubsub.egg-info/entry_points.txt
writing requirements to ../../build/timepubsub/timepubsub.egg-info/requires.txt
writing top-level names to ../../build/timepubsub/timepubsub.egg-info/top_level.txt
reading manifest file '../../build/timepubsub/timepubsub.egg-info/SOURCES.txt'
writing manifest file '../../build/timepubsub/timepubsub.egg-info/SOURCES.txt'
running build
running build_py
copying timepubsub/timepublisher.py -> /home/dani/IntroWorkSpaceDannyP/build/timepubsub/build/lib/timepubsub
copying timepubsub/timesubscriber.py -> /home/dani/IntroWorkSpaceDannyP/build/timepubsub/build/lib/timepubsub
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/dani/IntroWorkSpaceDannyP/build/timepubsub/build/lib/timepubsub/timepublisher.py -> /home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/python3.10/site-packages/timepubsub
copying /home/dani/IntroWorkSpaceDannyP/build/timepubsub/build/lib/timepubsub/timesubscriber.py -> /home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/python3.10/site-packages/timepubsub
byte-compiling /home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/python3.10/site-packages/timepubsub/timepublisher.py to timepublisher.cpython-310.pyc
byte-compiling /home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/python3.10/site-packages/timepubsub/timesubscriber.py to timesubscriber.cpython-310.pyc
  File "/home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/python3.10/site-packages/timepubsub/timesubscriber.py", line 21
    self.get_logger().info('datetime.datetime.fromtimestamp(int("1284105682")).striftime('%Y-%m-%d %H:%M:%S'))' % msg.data)
                                                                                             ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/python3.10/site-packages/timepubsub-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/timepubsub/timepubsub.egg-info to /home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/python3.10/site-packages/timepubsub-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/timepubsub
Installing talker script to /home/dani/IntroWorkSpaceDannyP/install/timepubsub/lib/timepubsub
writing list of installed files to '/home/dani/IntroWorkSpaceDannyP/build/timepubsub/install.log'
